project and blog carousel

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -17,7 +17,7 @@
 *@        <div class="container">
             <div class="header center">
                 <h1>Striving for a world where <span class="invert">startups</span> are owned by those who <span class="invert">built it</span></h1>
-                <p class="title-2">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
+                <p class="title-1">We are building a community of individuals & organisations who believe there is a better way to fund, build and reward startups.</p>
             </div>
 @*            <div class="hero-graphic">
                 <img src="/images/Frame 338.svg" />
@@ -134,7 +134,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
@@ -160,7 +160,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
@@ -187,7 +187,7 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <p class="subtitle-medium">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
+                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
                                 </div>
                                 <div class="card-tags-wrapper">
                                     <div class="card-tags">
