fix mobile navmenu links

--- a/SparcWeb/Shared/NavMenu.razor
+++ b/SparcWeb/Shared/NavMenu.razor
@@ -50,13 +50,13 @@
                 <a href="#">Home</a>
             </li>
             <li class="nav-link">
-                <a href="/bloglist">Resources</a>
+                <a href="/Blogs">Resources</a>
             </li>
             <li class="nav-link">
-                <a href="/projectlist">Projects</a>
+                <a href="/Projects">Projects</a>
             </li>
             <li class="nav-link">
-                <a href="/contact">Contact</a>
+                <a href="/Contact">Contact</a>
             </li>
         </ul>
         <div class="community-join">
