--- a/SparcWeb/wwwroot/Styles/Global/_typography.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_typography.scss
@@ -1,18 +1,24 @@
 ﻿body {
     font-family: 'NeueHaasDisplayRoman';
     font-weight: 400;
+    line-height: 120%;
 
     h1, h2, h3, h4, h5, h6, .subtitle-large {
         font-family: 'NeueHaasDisplayMedium';
     }
 
     .title-1 {
-        font-size: 24px;
-        line-height: 140%;
+        font-size: 68px;
     }
 
     .title-2 {
+        font-family: IBMPlexSans-Regular;
         font-size: 24px;
+    }
+
+    .subtitle-landing {
+        font-size: 24px;
+        line-height: 140%;
     }
 
     .subtitle-small {
@@ -29,6 +35,10 @@
 
     p, a, button {
         font-family: 'NeueHaasDisplayRoman';
+    }
+
+    a {
+        line-height: 100%;
     }
 
     button {
@@ -61,10 +71,6 @@
     }
 
     @media only screen and (max-width: 760px) {
-        .title-1 {
-            font-size: 20px;
-        }
-
         .subtitle-small {
             font-size: 14px;
         }
@@ -95,10 +101,6 @@
     }
 
     @media only screen and (max-width: 480px) {
-        .title-1 {
-            font-size: 16px;
-        }
-
         .subtitle-medium {
             font-size: 16px;
         }
