--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -161,11 +161,11 @@
 </div>
 
 @code {
-    public List<SlackPost> PostList = new List<SlackPost>();
+    //public List<SlackPost> PostList = new List<SlackPost>();
 
-    protected override async Task OnInitializedAsync()
-    {
-        var list = await Api.GetSlackPostsAsync("/blog-post");
-        PostList = list.ToList();
-    }
+    //protected override async Task OnInitializedAsync()
+    //{
+    //    var list = await Api.GetSlackPostsAsync("/blog-post");
+    //    PostList = list.ToList();
+    //}
 }
