change header subtitle to subtitle-1 from title-2

--- a/SparcWeb/wwwroot/Styles/Page/index.scss
+++ b/SparcWeb/wwwroot/Styles/Page/index.scss
@@ -25,7 +25,7 @@
                 line-height: 115px;
             }
 
-            p.title-2 {
+            p.subtitle-1 {
                 width: 70%;
                 max-width: 592px;
                 margin: 0 auto;
@@ -358,7 +358,7 @@
                     font-family: 'NeueHaasDisplayBold';
                 }
 
-                p.title-2 {
+                p.subtitle-1 {
                     font-family: 'IBMPlexSans-SemiBold';
                     font-size: 20px;
                 }
@@ -565,7 +565,7 @@
                     line-height: 120%;
                 }
 
-                p.title-2 {
+                p.subtitle-1 {
                     width: 100%;
                     font-size: 16px;
                 }
