--- a/SparcWeb/wwwroot/Styles/Global/_typography.scss
+++ b/SparcWeb/wwwroot/Styles/Global/_typography.scss
@@ -12,13 +12,12 @@
     }
 
     .title-2 {
-        font-family: IBMPlexSans-Regular;
         font-size: 24px;
     }
 
-    .subtitle-landing {
+    .subtitle-1 {
+        font-family: IBMPlexSans-Regular;
         font-size: 24px;
-        line-height: 140%;
     }
 
     .subtitle-small {
