Fix margins on Project list page, create ProjectCard component

--- a/SparcWeb/Pages/Index.razor
+++ b/SparcWeb/Pages/Index.razor
@@ -121,85 +121,9 @@
                 </div>
                 <div class="right">
                     <div class="card-wrapper">
-                        <div class="project-card">
-                            <div class="card-content">
-                                <div class="image-wrapper">
-                                    <img src="images/Laptop.png" />
-                                    <img class="project-status in-progress" src="images/icons/Status Pin In Progress.svg" />
-                                </div>
-                                <div class="card-header">
-                                    <h5 class="title-2 semi-bold">KodeKit</h5>
-                                    <div class="image-wrapper">
-                                        <img src="images/icons/Up-Right.svg" />
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                                </div>
-                                <div class="card-tags-wrapper">
-                                    <div class="card-tags">
-                                        <button class="btn-small">Design</button>
-                                        <button class="btn-small">Productivity</button>
-                                    </div>
-                                    <div class="card-github">
-                                        <button><img src="images/icons/Github.svg" /></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <div class="card-content">
-                                <div class="image-wrapper">
-                                    <img src="images/Laptop.png" />
-                                    <img class="project-status live" src="images/icons/Status Pin Live.svg" />
-                                </div>
-                                <div class="card-header">
-                                    <h5 class="title-2 semi-bold">KodeKit</h5>
-                                    <div class="image-wrapper">
-                                        <img src="images/icons/Up-Right.svg" />
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                                </div>
-                                <div class="card-tags-wrapper">
-                                    <div class="card-tags">
-                                        <button class="btn-small">Design</button>
-                                        <button class="btn-small">Productivity</button>
-                                    </div>
-                                    <div class="card-github">
-                                        <button><img src="images/icons/Github.svg" /></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-card">
-                            <div class="card-content">
-                                <div class="image-wrapper">
-                                    <img src="images/Laptop.png" />
-                                    <img class="project-status live" src="images/icons/Status Pin Live.svg" />
-
-                                </div>
-                                <div class="card-header">
-                                    <h5 class="title-2 semi-bold">KodeKit</h5>
-                                    <div class="image-wrapper">
-                                        <img src="images/icons/Up-Right.svg" />
-                                    </div>
-                                </div>
-                                <div>
-                                    <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                                </div>
-                                <div class="card-tags-wrapper">
-                                    <div class="card-tags">
-                                        <button class="btn-small">Design</button>
-                                        <button class="btn-small">Productivity</button>
-                                    </div>
-                                    <div class="card-github">
-                                        <button><img src="images/icons/Github.svg" /></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        <ProjectCard Title="Kode Kit" Status="Live"/>
+                        <ProjectCard Title="Kode Kit" Status="In Progress"/>
+                        <ProjectCard Title="Kode Kit" Status="In Progress"/>
                     </div>
                 </div>
             </div>
