--- a/SparcWeb/Pages/ProjectsList.razor
+++ b/SparcWeb/Pages/ProjectsList.razor
@@ -6,7 +6,7 @@
          <div class="container">
              <div class="header">
                 <div class="icon-wrapper">
-                <img src="./images/icons/04.svg" />
+                <img src="./images/icons/09-yellow.svg" />
                 </div>
                 <div>
                     <h2 class="title-1">Every great idea starts with a spark. Explore our journey to bring ideas to reality. </h2>
@@ -38,121 +38,10 @@
                 </div>
 
                 <div class="project-list">
-                    <div class="project-card">
-                        <div class="card-image">
-                            <img />
-                        </div>
-                        <div class="card-content">
-                            <div class="image-wrapper">
-                                <img src="./images/Laptop.png" />
-                            </div>
-                            <div class="card-header">
-                                <h5 class="title-2 semi-bold">KodeKit</h5>
-                                <a href="https://www.kodekit.io/" target="_blank" class="image-wrapper">
-                                    <img src="images/icons/Up-Right.svg" />
-                                </a>
-                            </div>
-                            <div>
-                                <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                            </div>
-                            <div class="card-tags-wrapper">
-                                <div class="card-tags">
-                                    <button class="btn-small">Design</button>
-                                    <button class="btn-small">Productivity</button>
-                                </div>
-                                <div class="card-github">
-                                    @*icon*@
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image">
-                            <img />
-                        </div>
-                        <div class="card-content">
-                            <div class="image-wrapper">
-                                <img src="./images/Laptop.png" />
-                            </div>
-                            <div class="card-header">
-                                <h5 class="title-2 semi-bold">KodeKit</h5>
-                                <div class="image-wrapper">
-                                    <img src="images/icons/Up-Right.svg" />
-                                </div>
-                            </div>
-                            <div>
-                                <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                            </div>
-                            <div class="card-tags-wrapper">
-                                <div class="card-tags">
-                                    <button class="btn-small">Design</button>
-                                    <button class="btn-small">Productivity</button>
-                                </div>
-                                <div class="card-github">
-                                    @*icon*@
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image">
-                            <img />
-                        </div>
-                        <div class="card-content">
-                            <div class="image-wrapper">
-                                <img src="./images/Laptop.png" />
-                            </div>
-                            <div class="card-header">
-                                <h5 class="title-2 semi-bold">KodeKit</h5>
-                                <div class="image-wrapper">
-                                    <img src="images/icons/Up-Right.svg" />
-                                </div>
-                            </div>
-                            <div>
-                                <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                            </div>
-                            <div class="card-tags-wrapper">
-                                <div class="card-tags">
-                                    <button class="btn-small">Design</button>
-                                    <button class="btn-small">Productivity</button>
-                                </div>
-                                <div class="card-github">
-                                    @*icon*@
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="project-card">
-                        <div class="card-image">
-                            <img />
-                        </div>
-                        <div class="card-content">
-                            <div class="image-wrapper">
-                                <img src="./images/Laptop.png" />
-                            </div>
-                            <div class="card-header">
-                                <h5 class="title-2 semi-bold">KodeKit</h5>
-                                <div class="image-wrapper">
-                                    <img src="images/icons/Up-Right.svg" />
-                                </div>
-                            </div>
-                            <div>
-                                <p class="subtitle-small">Remove the complexity of HTML & CSS, create a styleguide, and apply your styles directly to the HTML elements. No classes, no confusion.</p>
-                            </div>
-                            <div class="card-tags-wrapper">
-                                <div class="card-tags">
-                                    <button class="btn-small">Design</button>
-                                    <button class="btn-small">Productivity</button>
-                                </div>
-                                <div class="card-github">
-                                    @*icon*@
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <ProjectCard Title="Kode Kit" Status="Live"/>
+                    <ProjectCard Title="Kode Kit" Status="In Progress"/>
+                    <ProjectCard Title="Kode Kit" Status="In Progress"/>
+                    <ProjectCard Title="Kode Kit" Status="In Progress"/>
                 </div>
             </div>
         </div>
